kubernetes/apps/base/ai/onyx/app/sandbox-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: onyx-sandbox-proxy-kubesvc
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: sandbox-proxy
      app.kubernetes.io/instance: onyx
      app.kubernetes.io/name: onyx
  egress:
    # Allow sandbox proxy to communicate with kube services (not set in onyx netpol)
    # 1. Allow Kubernetes API Server via Service
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
